--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -19,10 +19,10 @@ jobs:
           repository: ${{ github.repository }}
           ref: main
 
-      # Clone sync-mirror using GITHUB_TOKEN
+      # Clone sync-mirror using secrets.PAT (Personal Access Token)
       - name: Clone sync-mirror
         run: |
-          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/penguinspizza/sync-mirror.git
+          git clone https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/sync-mirror.git
           cd sync-mirror
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
@@ -38,12 +38,10 @@ jobs:
         run: |
           cp -r ./* sync-mirror/
 
-      # Commit and Push changes to sync-mirror using GITHUB_TOKEN
+      # Commit and Push changes to sync-mirror using secrets.PAT
       - name: Commit and Push changes to sync-mirror
         run: |
           cd sync-mirror
           git add .
           git commit -m "Sync from sync-origin"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git push https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/sync-mirror.git
