--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           git clone https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/sync-mirror.git
           cd sync-mirror
-          git config user.name "penguinspizza"  # 固定のユーザー名を設定
-          git config user.email "penguinspizza@users.noreply.github.com"  # 固定のメールアドレスを設定
+          git config --global user.name "penguinspizza"  # グローバルにユーザー名を設定
+          git config --global user.email "penguinspizza@users.noreply.github.com"  # グローバルにメールアドレスを設定
 
       # Remove all files in sync-mirror
       - name: Remove all files in sync-mirror
