--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -25,7 +25,7 @@ jobs:
           git clone https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/sync-mirror.git
           cd sync-mirror
           git config --global user.name "penguinspizza"  # グローバルにユーザー名を設定
-          git config --global user.email "penguinspizza@users.noreply.github.com"  # グローバルにメールアドレスを設定定
+          git config --global user.email "penguinspizza@users.noreply.github.com"  # グローバルにメールアドレスを設定
 
       # Remove all files in sync-mirror
       - name: Remove all files in sync-mirror
@@ -43,5 +43,5 @@ jobs:
         run: |
           cd sync-mirror
           git add .
-          git commit -m "Sync from sync-origin"
+          git diff-index --quiet HEAD || git commit -m "Sync from sync-origin"  # 変更があればコミット
           git push
