--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -38,10 +38,11 @@ jobs:
         run: |
           rsync -a --exclude 'sync-mirror' ./ sync-mirror/
 
-      # Commit and Push changes to sync-mirror using the predefined origin
-      - name: Commit and Push changes to sync-mirror
+      # Pull, Commit, and Push changes to sync-mirror using the predefined origin
+      - name: Pull, Commit, and Push changes to sync-mirror
         run: |
           cd sync-mirror
+          git pull --rebase origin main  # リモートの変更を取得してリベース
           git add .
           git diff-index --quiet HEAD || git commit -m "Sync from sync-origin"  # 変更があればコミット
-          git push
+          git push origin main  # リモートにプッシュ
