--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -31,12 +31,13 @@ jobs:
       - name: Remove all files in sync-mirror
         run: |
           cd sync-mirror
-          rm -rf *
+          rm -rf *  # sync-mirrorディレクトリ内の全てのファイルを削除
 
-      # Copy files from sync-origin to sync-mirror, excluding the sync-mirror directory itself
+      # Copy files from sync-origin to sync-mirror
       - name: Copy files from sync-origin to sync-mirror
         run: |
-          rsync -a --exclude 'sync-mirror' ./ sync-mirror/
+          cp -r ../* ./  # 親ディレクトリ（sync-originの内容）からsync-mirrorへコピー
+          rm -rf ./sync-mirror  # sync-mirrorディレクトリ自体を除外
 
       # Commit and Force Push changes to sync-mirror using the predefined origin
       - name: Commit and Force Push changes to sync-mirror
