--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Commit and Force Push changes to sync-mirror
         run: |
           cd sync-mirror
+          git config user.name "penguinspizza"
+          git config user.email "72650078+penguinspizza@users.noreply.github.com"
           git add .
           git commit -m "Sync from sync-origin"
           git push --force origin main
