--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -35,4 +35,4 @@ jobs:
           git config user.email "72650078+penguinspizza@users.noreply.github.com"
           git add .
           git commit -m "Sync from sync-origin"
-          git push --force origin main
+          git push origin main
