--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -17,14 +17,16 @@ jobs:
         run: |
           git clone https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/sync-origin.git
 
-      # Sync to multiple mirrors
+      # Sync to multiple mirrors with specified branches
       - name: Sync to mirrors
         run: |
+          # リポジトリ名とブランチ名のペアを定義
           mirrors=(
-            "sync-mirror"  # 反映先リポジトリ1
-            "sync-mirror2" # 反映先リポジトリ2
+            "sync-mirror:main"  # 反映先リポジトリ1 と ブランチ
+            "sync-mirror2:develop" # 反映先リポジトリ2 と ブランチ
           )
-          for repo in "${mirrors[@]}"; do
+          for pair in "${mirrors[@]}"; do
+            IFS=':' read -r repo branch <<< "$pair"  # リポジトリ名とブランチ名を分割
             git clone https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/$repo.git
             rsync -a --exclude '.git' sync-origin/ $repo/  # .gitフォルダを除外してコピー
             cd $repo
@@ -32,6 +34,6 @@ jobs:
             git config user.email "72650078+penguinspizza@users.noreply.github.com"
             git add .
             git commit -m "Sync from sync-origin"
-            git push origin main
+            git push origin $branch  # 指定されたブランチにプッシュ
             cd ..
           done
