--- a/.github/workflows/sync_to_mirror.yml
+++ b/.github/workflows/sync_to_mirror.yml
@@ -22,18 +22,21 @@ jobs:
         run: |
           # リポジトリ名とブランチ名のペアを定義
           mirrors=(
-            "sync-mirror:main"  # 反映先リポジトリ1 と ブランチ
-            "sync-mirror2:develop" # 反映先リポジトリ2 と ブランチ
+            "sync-mirror:main"      # 反映先リポジトリ1 と ブランチ
+            "sync-mirror2:develop"  # 反映先リポジトリ2 と ブランチ
           )
           for pair in "${mirrors[@]}"; do
             IFS=':' read -r repo branch <<< "$pair"  # リポジトリ名とブランチ名を分割
-            git clone https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/$repo.git
+            
+            # 指定されたブランチを使ってリポジトリをクローン
+            git clone --branch $branch https://penguinspizza:${{ secrets.PAT }}@github.com/penguinspizza/$repo.git
+            
             rsync -a --exclude '.git' sync-origin/ $repo/  # .gitフォルダを除外してコピー
             cd $repo
             git config user.name "penguinspizza"
             git config user.email "72650078+penguinspizza@users.noreply.github.com"
             git add .
             git commit -m "Sync from sync-origin"
-            git push origin $branch  # 指定されたブランチにプッシュ
+            git push
             cd ..
           done
